egress-fw/allow-google.yaml
apiVersion: k8s.ovn.org/v1
kind: EgressFirewall
metadata:
  name: allow-google-only
spec:
  egress:
  - type: Allow
    to:
      cidrSelector: 8.8.8.8/32
  - type: Deny
    to:
      cidrSelector: 0.0.0.0/0
